table_3/annotator_cfnullness/cfnullness_scripts/checkerframework_3.34.0_results_WPI-nullgtnNullaway/post_nullaway_without_s_nameless-after-wpi.txt
../dataset/post_nullaway_without_s_nameless/src/com/namelessmc/java_api/FilteredUserListBuilder.java:27: error: (argument) $$ 4 $$ arg1 $$ Map.put $$ T extends @Initialized @Nullable Object $$ @Initialized @NonNull Object $$ ( 696, 701 ) $$ incompatible argument for parameter arg1 of Map.put.
		filters.put(filter, value);
		                    ^
  found   : T extends @Initialized @Nullable Object
  required: @Initialized @NonNull Object
../dataset/post_nullaway_without_s_nameless/src/com/namelessmc/java_api/integrations/DetailedDiscordIntegrationData.java:12: error: (method.invocation) $$ 3 $$ getIdentifier() $$ @UnderInitialization(com.namelessmc.java_api.integrations.DetailedDiscordIntegrationData.class) @NonNull IntegrationData $$ @Initialized @NonNull IntegrationData $$ ( 398, 418 ) $$ call to getIdentifier() not allowed on the given receiver.
		this.idLong = Integer.parseInt(this.getIdentifier());
		                                                 ^
  found   : @UnderInitialization(com.namelessmc.java_api.integrations.DetailedDiscordIntegrationData.class) @NonNull IntegrationData
  required: @Initialized @NonNull IntegrationData
../dataset/post_nullaway_without_s_nameless/src/com/namelessmc/java_api/integrations/DetailedMinecraftIntegrationData.java:15: error: (method.invocation) $$ 3 $$ getIdentifier() $$ @UnderInitialization(com.namelessmc.java_api.integrations.DetailedIntegrationData.class) @NonNull IntegrationData $$ @Initialized @NonNull IntegrationData $$ ( 486, 506 ) $$ call to getIdentifier() not allowed on the given receiver.
		this.uuid = NamelessAPI.websiteUuidToJavaUuid(this.getIdentifier());
		                                                                ^
  found   : @UnderInitialization(com.namelessmc.java_api.integrations.DetailedIntegrationData.class) @NonNull IntegrationData
  required: @Initialized @NonNull IntegrationData
3 errors
